Many changes
Added essentials autopurge
fixed dat autopurge for tekkit
some rewrites to crashrestart